gen/gen/HTMLParser.java
// Generated from C:/Users/User/Desktop/Ahmad Al Hafez\HTMLParser.g4 by ANTLR 4.8
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		XML=1, SEA_WS=2, START=3, SEA_WS2=4, AUTH=5, NAME=6, LOGO=7, LOGIN=8, 
		SIGNUP=9, INJECTUSER=10, NAV=11, FOOTER=12, PAGE=13, CONTROLLER=14, FORMS=15, 
		PNAME=16, SPLUS_COMMENT=17, END=18, CLOSE_ATTRIBUTE=19, BRACKET_OPEN=20, 
		BRACKET_CLOSE=21, BRACKET_OPEN2=22, BRACKET_CLOSE2=23, CHECK_OPEN=24, 
		CHECK_CLOSE=25, SINGLE_QOUTE=26, DOUBLE_QOUTE=27, TEXT_COLOR=28, COLOR=29, 
		INPUT_COLOR=30, ALIGN_LEFT=31, ALIGN_RIGHT=32, ALIGN_UP=33, USER_ROLE=34, 
		ADMIN_ROLE=35, USER=36, ADMIN=37, FORM=38, TABLE=39, EDIT=40, DELETE=41, 
		VIEW=42, SUBMIT=43, ATT=44, ATTEND=45, CHECK=46, CHECK_ONE=47, ONLY=48, 
		LIST=49, BLOCK=50, METRO=51, ASSIGN=52, COMMA=53, DOT=54, VAR=55, MAIL_ATT=56, 
		NUMBER=57;
	public static final int
		RULE_splus = 0, RULE_phpPlus = 1, RULE_phpElement = 2, RULE_string = 3, 
		RULE_var = 4, RULE_name = 5, RULE_logo = 6, RULE_nav = 7, RULE_footer = 8, 
		RULE_page = 9, RULE_login = 10, RULE_signUp = 11, RULE_auth = 12, RULE_inject = 13, 
		RULE_role = 14, RULE_email = 15, RULE_password = 16, RULE_name_page = 17, 
		RULE_tableName = 18, RULE_columnName = 19, RULE_pageAttributes = 20, RULE_authiticated = 21, 
		RULE_pageForm = 22, RULE_pageTable = 23, RULE_viewAs = 24, RULE_contollers = 25, 
		RULE_loginController = 26, RULE_singUpController = 27, RULE_navController = 28, 
		RULE_footerController = 29, RULE_formController = 30, RULE_pageController = 31, 
		RULE_pageName = 32, RULE_destenation = 33, RULE_array = 34, RULE_elements = 35, 
		RULE_formAttributes = 36, RULE_attributes = 37, RULE_attName = 38, RULE_attType = 39, 
		RULE_style = 40, RULE_loginStyle = 41, RULE_signUpStyle = 42, RULE_navStyle = 43, 
		RULE_footerStyle = 44, RULE_pageStyle = 45, RULE_styleAttributes = 46, 
		RULE_textColor = 47, RULE_color = 48, RULE_inputColor = 49, RULE_align = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"splus", "phpPlus", "phpElement", "string", "var", "name", "logo", "nav", 
			"footer", "page", "login", "signUp", "auth", "inject", "role", "email", 
			"password", "name_page", "tableName", "columnName", "pageAttributes", 
			"authiticated", "pageForm", "pageTable", "viewAs", "contollers", "loginController", 
			"singUpController", "navController", "footerController", "formController", 
			"pageController", "pageName", "destenation", "array", "elements", "formAttributes", 
			"attributes", "attName", "attType", "style", "loginStyle", "signUpStyle", 
			"navStyle", "footerStyle", "pageStyle", "styleAttributes", "textColor", 
			"color", "inputColor", "align"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "XML", "SEA_WS", "START", "SEA_WS2", "AUTH", "NAME", "LOGO", "LOGIN", 
			"SIGNUP", "INJECTUSER", "NAV", "FOOTER", "PAGE", "CONTROLLER", "FORMS", 
			"PNAME", "SPLUS_COMMENT", "END", "CLOSE_ATTRIBUTE", "BRACKET_OPEN", "BRACKET_CLOSE", 
			"BRACKET_OPEN2", "BRACKET_CLOSE2", "CHECK_OPEN", "CHECK_CLOSE", "SINGLE_QOUTE", 
			"DOUBLE_QOUTE", "TEXT_COLOR", "COLOR", "INPUT_COLOR", "ALIGN_LEFT", "ALIGN_RIGHT", 
			"ALIGN_UP", "USER_ROLE", "ADMIN_ROLE", "USER", "ADMIN", "FORM", "TABLE", 
			"EDIT", "DELETE", "VIEW", "SUBMIT", "ATT", "ATTEND", "CHECK", "CHECK_ONE", 
			"ONLY", "LIST", "BLOCK", "METRO", "ASSIGN", "COMMA", "DOT", "VAR", "MAIL_ATT", 
			"NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SplusContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(HTMLParser.START, 0); }
		public TerminalNode END() { return getToken(HTMLParser.END, 0); }
		public List<PhpPlusContext> phpPlus() {
			return getRuleContexts(PhpPlusContext.class);
		}
		public PhpPlusContext phpPlus(int i) {
			return getRuleContext(PhpPlusContext.class,i);
		}
		public SplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_splus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSplus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSplus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SplusContext splus() throws RecognitionException {
		SplusContext _localctx = new SplusContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_splus);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(START);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SEA_WS2) | (1L << AUTH) | (1L << NAME) | (1L << LOGO) | (1L << LOGIN) | (1L << SIGNUP) | (1L << INJECTUSER) | (1L << NAV) | (1L << FOOTER) | (1L << PAGE) | (1L << CONTROLLER) | (1L << SPLUS_COMMENT))) != 0)) {
				{
				{
				setState(103);
				phpPlus();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhpPlusContext extends ParserRuleContext {
		public List<TerminalNode> SPLUS_COMMENT() { return getTokens(HTMLParser.SPLUS_COMMENT); }
		public TerminalNode SPLUS_COMMENT(int i) {
			return getToken(HTMLParser.SPLUS_COMMENT, i);
		}
		public List<PhpElementContext> phpElement() {
			return getRuleContexts(PhpElementContext.class);
		}
		public PhpElementContext phpElement(int i) {
			return getRuleContext(PhpElementContext.class,i);
		}
		public PhpPlusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phpPlus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPhpPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPhpPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPhpPlus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhpPlusContext phpPlus() throws RecognitionException {
		PhpPlusContext _localctx = new PhpPlusContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_phpPlus);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(113);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SPLUS_COMMENT:
						{
						setState(111);
						match(SPLUS_COMMENT);
						}
						break;
					case SEA_WS2:
					case AUTH:
					case NAME:
					case LOGO:
					case LOGIN:
					case SIGNUP:
					case INJECTUSER:
					case NAV:
					case FOOTER:
					case PAGE:
					case CONTROLLER:
						{
						setState(112);
						phpElement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(115); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhpElementContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public LogoContext logo() {
			return getRuleContext(LogoContext.class,0);
		}
		public NavContext nav() {
			return getRuleContext(NavContext.class,0);
		}
		public FooterContext footer() {
			return getRuleContext(FooterContext.class,0);
		}
		public LoginContext login() {
			return getRuleContext(LoginContext.class,0);
		}
		public SignUpContext signUp() {
			return getRuleContext(SignUpContext.class,0);
		}
		public AuthContext auth() {
			return getRuleContext(AuthContext.class,0);
		}
		public InjectContext inject() {
			return getRuleContext(InjectContext.class,0);
		}
		public ContollersContext contollers() {
			return getRuleContext(ContollersContext.class,0);
		}
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public PageContext page() {
			return getRuleContext(PageContext.class,0);
		}
		public TerminalNode SEA_WS2() { return getToken(HTMLParser.SEA_WS2, 0); }
		public PhpElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phpElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPhpElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPhpElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPhpElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhpElementContext phpElement() throws RecognitionException {
		PhpElementContext _localctx = new PhpElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_phpElement);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				name();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				logo();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				nav();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				footer();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				login();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(122);
				signUp();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(123);
				auth();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(124);
				inject();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(125);
				contollers();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(126);
				style();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(127);
				page();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(128);
				match(SEA_WS2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public List<TerminalNode> SINGLE_QOUTE() { return getTokens(HTMLParser.SINGLE_QOUTE); }
		public TerminalNode SINGLE_QOUTE(int i) {
			return getToken(HTMLParser.SINGLE_QOUTE, i);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(SINGLE_QOUTE);
			setState(132);
			var();
			setState(133);
			match(SINGLE_QOUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(HTMLParser.VAR, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(HTMLParser.NAME, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(NAME);
			setState(138);
			string();
			setState(139);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogoContext extends ParserRuleContext {
		public TerminalNode LOGO() { return getToken(HTMLParser.LOGO, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public LogoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterLogo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitLogo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitLogo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogoContext logo() throws RecognitionException {
		LogoContext _localctx = new LogoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(LOGO);
			setState(142);
			string();
			setState(143);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NavContext extends ParserRuleContext {
		public TerminalNode NAV() { return getToken(HTMLParser.NAV, 0); }
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public NavContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nav; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterNav(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitNav(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitNav(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NavContext nav() throws RecognitionException {
		NavContext _localctx = new NavContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nav);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(NAV);
			setState(146);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FooterContext extends ParserRuleContext {
		public TerminalNode FOOTER() { return getToken(HTMLParser.FOOTER, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public FooterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_footer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterFooter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitFooter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitFooter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FooterContext footer() throws RecognitionException {
		FooterContext _localctx = new FooterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_footer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(FOOTER);
			setState(149);
			string();
			setState(150);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public TerminalNode PAGE() { return getToken(HTMLParser.PAGE, 0); }
		public PageAttributesContext pageAttributes() {
			return getRuleContext(PageAttributesContext.class,0);
		}
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(PAGE);
			setState(153);
			pageAttributes();
			setState(154);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoginContext extends ParserRuleContext {
		public TerminalNode LOGIN() { return getToken(HTMLParser.LOGIN, 0); }
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public LoginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_login; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterLogin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitLogin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitLogin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoginContext login() throws RecognitionException {
		LoginContext _localctx = new LoginContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_login);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(LOGIN);
			setState(157);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignUpContext extends ParserRuleContext {
		public TerminalNode SIGNUP() { return getToken(HTMLParser.SIGNUP, 0); }
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public SignUpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signUp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSignUp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSignUp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSignUp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignUpContext signUp() throws RecognitionException {
		SignUpContext _localctx = new SignUpContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_signUp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(SIGNUP);
			setState(160);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthContext extends ParserRuleContext {
		public TerminalNode AUTH() { return getToken(HTMLParser.AUTH, 0); }
		public TerminalNode CLOSE_ATTRIBUTE() { return getToken(HTMLParser.CLOSE_ATTRIBUTE, 0); }
		public AuthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_auth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterAuth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitAuth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitAuth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthContext auth() throws RecognitionException {
		AuthContext _localctx = new AuthContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_auth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(AUTH);
			setState(163);
			match(CLOSE_ATTRIBUTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
